package com.holddie.design.pattern.p1creation.c02factory.factoryMethod;

/**
 * 抽象电风扇
 * @author yangze1
 * @version 1.0.0
 * @email holddie@163.com
 * @date 2018/5/23 8:55
 */
public interface IFan {
    public void switchOn();

    public void switchOff();
}
