package com.holddie.design.pattern.p1creation.c02factory.factoryMethod;

/**
 * 抽象风扇工厂类
 * @author yangze1
 * @version 1.0.0
 * @email holddie@163.com
 * @date 2018/5/23 8:57
 */
public interface IFanFactory {
    IFan createFan();
}
